Spritify the HUD elements